cluster/homa/mosquitto/003-service.yaml
---

kind: Service
apiVersion: v1
metadata:
  name: mosquitto
  namespace: homa
  labels:
    app: mosquitto
    kubernetes.io/name: mosquitto
spec:
  ports:
    - name: mqtt
      protocol: TCP
      port: 1883
      targetPort: 1883
      nodePort: 31612
  selector:
    app: mosquitto
  type: NodePort
